renaming the rest

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -1,6 +1,6 @@
 {
   "extensionName": {
-    "message": "yet another speed dial",
+    "message": "simple speed dial",
     "description": "title of the app, displayed in store"
   },
   "extensionDescription": {
